--- a/popup/popup.css
+++ b/popup/popup.css
@@ -26,13 +26,14 @@ header {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .app-name {
   font-size: 18px;
   font-weight: 700;
   color: #fff;
+  text-align: center;
 }
 
 /* Main Content */
