--- a/popup/popup.css
+++ b/popup/popup.css
@@ -77,6 +77,11 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 16px;
+}
+
+.toggle-row:last-child {
+  margin-bottom: 0;
 }
 
 .toggle-label {
